--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id = "root">
-        <h1>This content will be replaced by parent tag in App.js</h1>
+        <h1>Harsha is learning React</h1>
     </div>
    
     <script type="module" src="./App.js"></script>
