--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div id = "root">
-        <h1>Harsha is learning React</h1>
-    </div>
-   
+    <div id = "root"></div>
     <script type="module" src="./App.js"></script>
 
 </body>
